Project GraduationProject {
  database_type: "PostgreSQL"
  Note: "Logical ERD for thesis/report. Only core business tables are shown."
}

Table accounts {
  id uuid [pk]
  email text [not null, unique]
  username text [not null, unique]
  role text [not null, note: "admin | teacher | student"]
  full_name text
  admin_class_id uuid
  first_login boolean
  is_active boolean
  created_at timestamptz
}

Table programs {
  id uuid [pk]
  code text [not null, unique]
  name text [not null]
  is_active boolean
  created_at timestamptz
}

Table subject_groups {
  id uuid [pk]
  program_id uuid
  code text [not null]
  name text [not null]
  sort_order int
  created_at timestamptz
}

Table subjects {
  id uuid [pk]
  program_id uuid
  subject_group_id uuid
  name text [not null]
  code text
  credits decimal
  semester int
  category text
  prerequisites text [note: "UUID[]"]
  created_at timestamptz
}

Table admin_classes {
  id uuid [pk]
  program_id uuid
  display_name text [not null]
  manager_teacher_id uuid
  intake_year int
  section text
  created_at timestamptz
}

Table classes {
  id uuid [pk]
  subject_id uuid [not null]
  teacher_id uuid [not null]
  semester text [not null]
  year int [not null]
  created_at timestamptz
}

Table enrollments {
  id uuid [pk]
  class_id uuid [not null]
  student_id uuid [not null]
  enrolled_at timestamptz
}

Table exams {
  id uuid [pk]
  class_id uuid
  admin_class_id uuid
  subject_id uuid
  created_by uuid [not null]
  title text [not null]
  duration_min int [not null]
  opens_at timestamptz
  ends_at timestamptz
  created_at timestamptz
}

Table question_bank {
  id uuid [pk]
  created_by uuid [not null]
  subject_id uuid
  content text [not null]
  question_type text [not null]
  difficulty text
  chapter int
  usage_count int
  created_at timestamptz
}

Table questions {
  id uuid [pk]
  exam_id uuid [not null]
  question_bank_id uuid
  content text [not null]
  question_type text [not null]
  points decimal
  difficulty text
  chapter int
  created_at timestamptz
}

Table exam_sessions {
  id uuid [pk]
  exam_id uuid [not null]
  student_id uuid [not null]
  status text
  started_at timestamptz
  submitted_at timestamptz
  score numeric
  max_points numeric
  grading_status text
  created_at timestamptz
}

Table grading_assignments {
  id uuid [pk]
  exam_session_id uuid [not null]
  exam_id uuid [not null]
  teacher_id uuid [not null]
  assigned_by uuid [not null]
  assigned_at timestamptz
  graded_at timestamptz
  status text
}

Ref: accounts.admin_class_id > admin_classes.id

Ref: subject_groups.program_id > programs.id
Ref: subjects.program_id > programs.id
Ref: subjects.subject_group_id > subject_groups.id

Ref: admin_classes.program_id > programs.id
Ref: admin_classes.manager_teacher_id > accounts.id

Ref: classes.subject_id > subjects.id
Ref: classes.teacher_id > accounts.id

Ref: enrollments.class_id > classes.id
Ref: enrollments.student_id > accounts.id

Ref: exams.class_id > classes.id
Ref: exams.admin_class_id > admin_classes.id
Ref: exams.subject_id > subjects.id
Ref: exams.created_by > accounts.id

Ref: question_bank.created_by > accounts.id
Ref: question_bank.subject_id > subjects.id

Ref: questions.exam_id > exams.id
Ref: questions.question_bank_id > question_bank.id

Ref: exam_sessions.exam_id > exams.id
Ref: exam_sessions.student_id > accounts.id

Ref: grading_assignments.exam_session_id > exam_sessions.id
Ref: grading_assignments.exam_id > exams.id
Ref: grading_assignments.teacher_id > accounts.id
Ref: grading_assignments.assigned_by > accounts.id
